--- a/main.html
+++ b/main.html
@@ -57,15 +57,63 @@
                   </svg>
 
                 <div class="main-intro-left">
-                    <img src="/common/img/logo_color.svg" alt="">
+                    <div class="main-introimg-div">
+                        <img src="/common/img/logo_color.svg" alt="조선통신사 디지털아카이브 로고">
+                    </div>
                     <h2>조선통신사 <span class="ft-color-red">디지털</span> 아카이브</h2>
-                    <p class="intro-left-subT">CHOSUN TONGSINSA DIGITAL ARCHIVE</p>
+                    <p class="main-intro-subT">CHOSUN TONGSINSA DIGITAL ARCHIVE</p>
                     <P>부산의 유일한 유네스코 세계기록유산인</P>
                     <p>조선통신사 기록물을 보관하는</p>
                     <p>온라인 박물관입니다.</p>
                 </div>
+                <div class="vt-line"></div>
                 <div class="main-intro-right">
-
+                    <div class="main-introimg-div">
+                        <img src="/common/img/UNESCO_logo.svg" alt="유네스코 로고">
+                    </div>
+                    <h2>2017年10月30日</h2>
+                    <p class="main-intro-subT">200여년간 이어진 한일 교류의 상징</p>
+                    <P>조선통신사 기록물 유네스코 등재</P>
+                </div>
+            </article>
+        </section>
+        <section id="mainCollection">
+            <article id="mainCollInner" class="web-common-inner">
+                <div class="main-coll-text">
+                    <h3>디지털<span>소장자료</span></h3>
+                    <p class="main-coll-subT">DIGITAL COLLECTION</p>
+                    <div class="main-coll-button">
+                        MORE
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32"><path fill="none" d="M0 0h24v24H0z"/><path d="M16 12l-6 6V6z" fill="rgba(255,255,255,1)"/></svg>
+                    </div>
+                </div>
+                <div class="main-coll-items">
+                    <ul>
+                        <li>
+                            <img src="" alt="소장자료01">
+                            <label></label>
+                        </li>
+                        <li>
+                            <img src="" alt="소장자료02">
+                            <label></label>
+                        </li>
+                        <li>
+                            <img src="" alt="소장자료03">
+                            <label></label>
+                        </li>
+                        <li>
+                            <img src="" alt="소장자료04">
+                            <label></label>
+                        </li>
+                        <li>
+                            <img src="" alt="소장자료05">
+                            <label></label>
+                        </li>
+                        <li>
+                            <img src="" alt="소장자료05">
+                            <label></label>
+                        </li>
+                    </ul>
                 </div>
             </article>
         </section>
