--- a/main.html
+++ b/main.html
@@ -7,11 +7,13 @@
 
     <link rel="stylesheet" href="common/css/reset.css">
     <link rel="stylesheet" href="common/css/default.css">
+    <link rel="stylesheet" href="module/css/dropDown.css"> <!--dropDowm-->
+    <link rel="stylesheet" href="common/css/variables.css"> <!--variables-->
+
     <link rel="stylesheet" href="usr/style.css">
 
     <script src="/common/js/jquery-3.6.0.js"></script>
-    <script src="/module/js/extraDropDown.js" defer></script>
-
+    <script src="/module/js/extraDropDown.js" defer></script> <!--dropDowm-->
 
     <title>::조선통신사 디지털 아카이브</title>
 </head>
@@ -20,17 +22,48 @@
         <section id="mainSearch">
             <article id="mainSearchInner" class="web-common-inner">
                 <div class="main-top-select">                   
-                    <select>
-                        <option value="" disabled selected>Family site</option>
-                        <option value="">부산문화재단</option>
-                        <option value="">조선통신사문화교류사업</option>
-                    </select>
-                    <select>
-                        <option value="">Language</option>
-                        <option value="">한국어</option>
-                        <option value="">English</option>
-                        <option>日本語</option>
-                    </select>
+                    <div class="required extras extra-dropdown" data-input-common>
+                        <div class="is-required">
+                            <!-- <svg class="remix">
+                                <use xlink:href="/module/img/remixicon.symbol.svg#ri-check-line"></use>
+                            </svg> -->
+                            </div>
+                            <input type="text" id="signUpLocation" placeholder="Family Site" readonly>
+                            <div class="input-extras">
+                                <hr class="vf">
+                                <button type="button" id="btnSlctLocation" class="hover-tooltip" data-tooltip="Family Site">
+                                <svg class="remix">
+                                <use xlink:href="/module/img/remixicon.symbol.svg#ri-arrow-drop-down-line"></use>
+                                </svg>
+                                </button>
+                            <div class="dropdown-list">
+                                <a href="javascript:void(0);" class="dropdown-items" data-value="">부산문화재단</a>
+                                <a href="javascript:void(0);" class="dropdown-items" data-value="">조선통신사문화교류사업</a>
+                            </div>
+                        </div>
+                    </div> <!-- 패밀리 사이드 -->
+
+                    <div class="required extras extra-dropdown" data-input-common>
+                        <div class="is-required">
+                            <!-- <svg class="remix">
+                                <use xlink:href="/module/img/remixicon.symbol.svg#ri-check-line"></use>
+                            </svg> -->
+                            </div>
+                            <input type="text" id="signUpLocation" placeholder="Language" readonly>
+                            <div class="input-extras">
+                                <hr class="vf">
+                                <button type="button" id="btnSlctLocation" class="hover-tooltip" data-tooltip="Language">
+                                <svg class="remix">
+                                <use xlink:href="/module/img/remixicon.symbol.svg#ri-arrow-drop-down-line"></use>
+                                </svg>
+                                </button>
+                            <div class="dropdown-list">
+                                <a href="javascript:void(0);" class="dropdown-items" data-value="">한국어</a>
+                                <a href="javascript:void(0);" class="dropdown-items" data-value="">English</a>
+                                <a href="javascript:void(0);" class="dropdown-items" data-value="">日本語</a>
+                            </div>
+                        </div>
+                    </div> <!-- 언어선택 -->
                    
                 </div>
                 <div class="total-space"></div>
