--- a/main.html
+++ b/main.html
@@ -117,35 +117,77 @@
                     <p class="main-coll-subT">DIGITAL COLLECTION</p>
                     <div class="main-coll-button">
                         MORE
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32"><path fill="none" d="M0 0h24v24H0z"/><path d="M16 12l-6 6V6z" fill="rgba(255,255,255,1)"/></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16 12l-6 6V6z" fill="rgba(255,255,255,1)"/></svg>
                     </div>
                 </div>
                 <div class="main-coll-items">
                     <ul>
                         <li>
-                            <img src="" alt="소장자료01">
-                            <label></label>
+                            <img src="/common/img/coll-item-temp01.jpg" alt="소장자료01">
+                            <label>K-II-8 김동명사상록</label>
                         </li>
                         <li>
-                            <img src="" alt="소장자료02">
-                            <label></label>
+                            <img src="/common/img/coll-item-temp02.jpg" alt="소장자료02">
+                            <label>K-II-29 일동장유가</label>
                         </li>
                         <li>
-                            <img src="" alt="소장자료03">
-                            <label></label>
+                            <img src="/common/img/coll-item-temp03.jpg" alt="소장자료03">
+                            <label>K-I-2 변례집요</label>
                         </li>
                         <li>
-                            <img src="" alt="소장자료04">
-                            <label></label>
+                            <img src="/common/img/coll-item-temp04.jpg" alt="소장자료04">
+                            <label>K-I-1 통신사등록</label>
                         </li>
                         <li>
-                            <img src="" alt="소장자료05">
-                            <label></label>
+                            <img src="/common/img/coll-item-temp05.jpg" alt="소장자료05">
+                            <label>K-I-1 통신사등록</label>
                         </li>
                         <li>
-                            <img src="" alt="소장자료05">
-                            <label></label>
+                            <img src="/common/img/coll-item-temp06.jpg" alt="소장자료05">
+                            <label>K-II-23 일관시초</label>
                         </li>
+                    </ul>
+                </div>
+            </article>
+        </section>
+
+        <section id="mainSubject">
+            <article id="mainSubjectInner" class="web-common-inner">
+                <div class="main-subject-text">
+                    <h3>주제별<span>기록물</span></h3>
+                    <p class="main-subject-subT">DIGITAL COLLECTION</p>
+                    <div class="main-subject-button">
+                        MORE
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16 12l-6 6V6z" fill="rgba(255,255,255,1)"/></svg>
+                    </div>
+                </div>
+                <div class="main-subject-items">
+                    <ul>
+                        <li>기록물 분류별</li>
+                        <li>외교 기록</li>
+                        <li>여정의 기록</li>
+                        <li>문화교류의 기록</li>                        
+                    </ul>
+                    <ul>
+                        <li>제작 시기별</li>
+                        <li>1607-1642</li>
+                        <li>1643-1711</li>
+                        <li>1719-1811</li>
+                        <li>제작년도 미상</li>
+                    </ul>
+                    <ul>
+                        <li>제작 국가별</label>
+                        <li>조선</li>
+                        <li>일본</li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <ul>
+                        <li>기록물 형태별</li>
+                        <li>책자</li>
+                        <li>서화(글)</li>
+                        <li>서화(그림)</li>
+                        <li></li>
                     </ul>
                 </div>
             </article>
