--- a/main.html
+++ b/main.html
@@ -17,6 +17,9 @@
 
     <title>::조선통신사 디지털 아카이브</title>
 </head>
+<header>
+    
+</header>
 <body>
     <div id="wrap">
         <section id="mainSearch">
