--- a/totalSearch.html
+++ b/totalSearch.html
@@ -101,8 +101,7 @@
     </form>
     <div class="ago-search-box">
         <ul><span class="Recent_searches">최근검색어</span>
-            <li>skjdalksdjlk </li>
-            <li>skjdalksdjlk </li>
+            <li>asas</li>
         </ul>
     </div>
 </section><!--total-search-box-->
