--- a/header.html
+++ b/header.html
@@ -16,7 +16,29 @@
     <script src="/module/js/extraDropDown.js" defer></script> <!--dropDowm-->
     <title>::조선통신사 디지털아카이브::</title>
 </head>
+<header>
+    <section id="headerTop" class="web-common-inner">
+        <div class="hd-logo-div">
+            <img src="/common/img/logo_color.svg" alt="조선통신사 디지털아카이브 로고">
+            <p>
+                <span>조선통신사</span>
+                <span>디지털 아카이브</span>
+            </p>
+        </div>
+    </section>
+    <nav>
+        <div class="web-common-inner">
+            <a href="">아카이브 소개</a>
+            <a href="">기록물 검색</a>
+            <a href="">분류별 기록물</a>
+            <a href="">디지털 소장자료</a>
+            <a href="">가상전시관</a>    
+        </div>
+    </nav>
+</header>
+
 <body>
     
 </body>
+
 </html>
