--- a/digital.html
+++ b/digital.html
@@ -57,10 +57,10 @@
                             <li>서울대학교 규장각한국학 연구원</li>
                         </ul>
 
-                        <button class="btnStyle">디지털 소장자료보기</button>
+                        <button class="round_btnStyle">디지털 소장자료보기</button>
                     </div>
                 </div><!--반복영역-->
-                
+
             </div>
         </article>
     </section><!--digtal-content-->
