--- a/login.html
+++ b/login.html
@@ -23,23 +23,25 @@
 <body id="backgroundImg">
     <div id="wrap">
         <section id="login-page">
-            <div>
+            <div class="login-title-img">
                 <img src="/common/img/logo_color.svg" />
                 <p>조선통신사 디지털 아카이브</p>
             </div>
-                <input type="text">
-                <input type="password">
-                <button>관리자 로그인</button>
+            <form class="login-form-text">
+                <input type="text" placeholder="아이디">
+                <input type="password" placeholder="비밀번호">
+                <button class="Square_btnStyle">관리자 로그인</button>
+            </form>
 
-                <div>
-                    <label><input type="checkbox">로그인 상태 유지</label>
-                    <label><input type="checkbox">아이디 저장</label>
-                </div>
+            <div>
+                <label><input type="checkbox">로그인 상태 유지</label>
+                <label><input type="checkbox">아이디 저장</label>
+            </div>
 
-                <div>
-                    <p>아이디 찾기</p>
-                    <p>비밀번호 찾기</p>
-                </div>
+            <div>
+                <p>아이디 찾기</p>
+                <p>비밀번호 찾기</p>
+            </div>
         </section>
     </div><!--wrap-->
 </body>
