--- a/login.html
+++ b/login.html
@@ -23,26 +23,37 @@
 <body id="backgroundImg">
     <div id="wrap">
         <section id="login-page">
-            <div class="login-title-img">
-                <img src="/common/img/logo_color.svg" />
-                <p>조선통신사 디지털 아카이브</p>
-            </div>
-            <form class="login-form-text">
-                <input type="text" placeholder="아이디">
-                <input type="password" placeholder="비밀번호">
-                <button class="Square_btnStyle">관리자 로그인</button>
-            </form>
+            <article id="login-page-inner">
+                <div class="login-title-img">
+                    <img src="/common/img/logo_color.svg" />
+                    <p>조선통신사 디지털 아카이브</p>
+                </div>
+                <form class="login-form-text">
+                    <input type="text" placeholder="아이디">
+                    <input type="password" placeholder="비밀번호">
+                    <button class="Square_btnStyle">관리자 로그인</button>
+                </form>
 
-            <div>
-                <label><input type="checkbox">로그인 상태 유지</label>
-                <label><input type="checkbox">아이디 저장</label>
-            </div>
-
-            <div>
-                <p>아이디 찾기</p>
-                <p>비밀번호 찾기</p>
-            </div>
-        </section>
+                <!--체크박스 커스텀-->
+                <div class="chkbox-keeplog" data-input-chkbox="">
+                    <input type="checkbox" id="chkKeepLog" name="remember-me">
+                    <label for="chkKeepLog">
+                        <span data-check-icon="">
+                            <svg class="remix">
+                                <use xlink:href="/module/img/remixicon.symbol.svg#ri-check-line"></use>
+                            </svg>
+                        </span>
+                        <span data-check-label="">아이디 저장</span>
+                    </label>
+                </div>
+                <!--체크박스 커스텀-->
+                <div class="login-Find-btn">
+                    <p>아이디 찾기</p>
+                    <hr>
+                    <p>비밀번호 찾기</p>
+                </div>
+            </article><!--login-page-inner-->
+        </section><!--login-page-->
     </div><!--wrap-->
 </body>
 </html>
