--- a/btmSlider.html
+++ b/btmSlider.html
@@ -26,16 +26,33 @@
             <div class="common-slider-container">
                 <div class="common-bottom-slider">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide">고려대 도서관</div>
-                      <div class="swiper-slide">국립고궁박물관</div>
-                      <div class="swiper-slide">국립중앙도서관</div>
-                      <div class="swiper-slide">국립중앙박물관</div>
-                      <div class="swiper-slide">국립해양박물관</div>
-                      <div class="swiper-slide">국사편찬위원회</div>
-                      <div class="swiper-slide">부산박물관</div>
-                      <div class="swiper-slide">서울대학교규장각한국학연구원</div>
-                      <div class="swiper-slide">충남역사문화연구원</div>
-                      <div class="swiper-slide">고려대도서관</div>
+                      <div class="swiper-slide">
+                        <img src="/common/img/place/place_01.png" alt="고려대학교 도서관">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="/common/img/place/place_02.png" alt="국립고궁박물관">
+                      </div>
+                      <div class="swiper-slide">
+                        <img class="common-slideimg-height02" src="/common/img/place/place_03.png" alt="국립중앙도서관">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="/common/img/place/place_04.png" alt="국립중앙박물관">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="/common/img/place/place_05.png" alt="국립해양박물관">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="/common/img/place/place_06.jpg" alt="국사편찬위원회">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="/common/img/place/place_07.png" alt="부산박물관">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="/common/img/place/place_08.png" alt="규장각 한국학 연구원">
+                      </div>
+                      <div class="swiper-slide">
+                        <img class="common-slideimg-height" src="/common/img/place/place_09.gif" alt="충청남도 역사문화연구원">
+                      </div>
                     </div>
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div>                
