--- a/btmSlider.html
+++ b/btmSlider.html
@@ -22,7 +22,7 @@
 <body>
     <section id="btmSlider">
         <div class="web-common-inner">
-            <h2>기록물소장처</h2>
+            <h2 data-lang-type="kr">기록물소장처</h2>
             <div class="common-slider-container">
                 <div class="common-bottom-slider">
                     <div class="swiper-wrapper">
