--- a/adminBook.html
+++ b/adminBook.html
@@ -8,19 +8,16 @@
 
     <link rel="stylesheet" href="common/css/reset.css">
     <link rel="stylesheet" href="common/css/default.css">
-    <link rel="stylesheet" href="module/css/dropDown.css">
-    <!--dropDowm-->
-    <link rel="stylesheet" href="common/css/variables.css">
-    <!--variables-->
+    <link rel="stylesheet" href="module/css/dropDown.css"><!--dropDowm-->
+    <link rel="stylesheet" href="common/css/variables.css"><!--variables-->
 
     <link rel="stylesheet" href="admin/adminStyle.css">
 
     <script src="/common/js/jquery-3.6.0.js"></script>
-    <script src="/module/js/extraDropDown.js" defer></script>
-    <!--dropDowm-->
+    <script src="/module/js/extraDropDown.js" defer></script><!--dropDowm-->
 
 
-    <title>소장자료</title>
+    <title>도록</title>
 </head>
 
 <body>
@@ -35,11 +32,11 @@
             </div>
         </div>
         <ul id="subNav">
-            <li class="sub-page-routes " onclick="location.href='illustratedBook.html'">도록</li>
-            <li class="sub-page-routes current" onclick="location.href='collectionData.html'">소장 자료</li>
+            <li class="sub-page-routes current" onclick="location.href='adminBook.html'">도록</li>
+            <li class="sub-page-routes " onclick="location.href='adminData.html'">소장 자료</li>
         </ul>
 
-        <section id="contentView" data-sub-route="community" data-sub-route-current="소장 자료"></section>
+        <section id="contentView" data-sub-route="community" data-sub-route-current="도록"></section>
 
     </div>
 </div>
