폰트 추가 및 아카이브소개

--- a/adminData.html
+++ b/adminData.html
@@ -22,10 +22,11 @@
 
 <body>
     <div id="wrap">
+
+        <!--서브페이지 탭 + 이미지-->
         <div id="admin-sub-Page">
             <div id="sub-page-box">
                 <img src="https://picsum.photos/1920/1080?random=1" alt="" data-sub-image="">
-
                 <div data-sub-text="">
                     <h4 data-sub-title="">조선통신사 디지털 아카이브 자료등록 관리자페이지</h4>
                     <hr class="hf">
@@ -35,12 +36,13 @@
                 <li class="sub-page-routes " onclick="location.href='adminBook.html'">도록</li>
                 <li class="sub-page-routes current" onclick="location.href='adminData.html'">소장 자료</li>
             </ul>
-
             <section id="contentView" data-sub-route="community" data-sub-route-current="소장 자료">
-
             </section>
 
-    </div>
+        </div>
+
+    <section>여기에 진행하면 됩</section>
+
 </div>
 </body>
 
