--- a/archive.html
+++ b/archive.html
@@ -24,9 +24,9 @@
 <body id="">
     <div id="wrap">
         <section id="archive-nav">
-            <ul id="subNav1">
-                <li class="sub-page-routes1 current" onclick="location.href='archive.html'">아카이브 안내</li>
-                <li class="sub-page-routes1 " onclick="location.href='DataUse.html'">자료이용 안내</li>
+            <ul id="archiveSubNav">
+                <li class="archive-sub-routes current" onclick="location.href='archive.html'">아카이브 안내</li>
+                <li class="archive-sub-routes " onclick="location.href='dataUse.html'">자료이용 안내</li>
             </ul>
             <div id="contentView" data-sub-route="community" data-sub-route-current="아카이브 안내">
             </div>
