--- a/DataUse.html
+++ b/DataUse.html
@@ -61,7 +61,7 @@
                                 <td>1</td>
                                 <td>고려대학교</td>
                                 <td>
-                                    <div class="qweqwe">
+                                    <div class="table-td-list">
                                         <p>K.ll-24 일본록 (日本錄)</p>
                                         <p>K.ll-25 승사록 (乘槎錄)</p>
                                         <p>K.ll-26 사록 (槎錄)</p>
