--- a/totalSearch.html
+++ b/totalSearch.html
@@ -26,11 +26,8 @@
 
         <hr class="vf">
 
-        <button type="button" id="btnSearch" data-tot-button>
-           <svg class="remix">
-                <use xlink:href="/module/img/remixicon.symbol.svg#ri-search-2-line"></use>
-            </svg>
-      
+        <button type="submit" id="btnSearch" data-tot-button>
+            찾아보기
         </button>
     </form>
     <div class="ago-search-box">
