--- a/login.html
+++ b/login.html
@@ -47,11 +47,11 @@
                     </label>
                 </div>
                 <!--체크박스 커스텀-->
-                <div class="login-Find-btn">
+                <!-- <div class="login-Find-btn">
                     <p>아이디 찾기</p>
                     <hr>
                     <p>비밀번호 찾기</p>
-                </div>
+                </div> -->
             </article><!--login-page-inner-->
         </section><!--login-page-->
     </div><!--wrap-->
