--- a/adminData.html
+++ b/adminData.html
@@ -41,7 +41,11 @@
 
         </div>
 
-    <section>여기에 진행하면 됩</section>
+    <section id="data-write-page">
+        <article id="dataWrite-page-inner">
+            sadfaf
+        </article>
+    </section>
 
 </div>
 </body>
