--- a/adminBook.html
+++ b/adminBook.html
@@ -133,16 +133,16 @@
             </div>
 
             <div class="dataWrite-field-box">
-                <p class="field-title">
+                <p class="field-title1 ">
                     <span>도</span>
                     <span>록</span>
                     <span>본</span>
                     <span>문</span>
                 </p>
-                <div class="text-box">
-                    <input type="text" class="field-text1" placeholder="국문">
-                    <input type="text" class="field-text1" placeholder="일문">
-                    <input type="text" class="field-text1" placeholder="영문">
+                <div class="textarea-box">
+                    <textarea type="text" class="field-textarea" placeholder="국문"></textarea>
+                    <textarea type="text" class="field-textarea" placeholder="일문"></textarea>
+                    <textarea type="text" class="field-textarea" placeholder="영문"></textarea>
                 </div>
             </div>
 
