--- a/adminData.html
+++ b/adminData.html
@@ -203,10 +203,10 @@
                         <span>기</span>
                         <span>록</span>
                         <span>물</span>
-                        <span>불</span>
+                        <span>분</span>
                         <span>류</span>
                     </p>
-                    <input type="radio" class="field-choice" name="Record" id="diplomacy" checked><label
+                    <input type="radio" class="field-choice" name="Record" id="diplomacy"><label
                         for="diplomacy">외교 기록</label>
                     <input type="radio" class="field-choice" name="Record" id="journey"><label for="journey">여정의
                         기록</label>
@@ -222,7 +222,7 @@
                         <span>가</span>
 
                     </p>
-                    <input type="radio" class="field-choice" name="nation" id="Korea" checked><label
+                    <input type="radio" class="field-choice" name="nation" id="Korea"><label
                         for="Korea">조선</label>
                     <input type="radio" class="field-choice" name="nation" id="Japan"><label for="Japan">일본</label>
                 </div>
