--- a/archive.html
+++ b/archive.html
@@ -110,15 +110,14 @@
                         <p>박화진(부경대학교 교수)</p>
                         <p>한태문(부경대학교 교수)</p>
                         <p>이재성(부경대학교 교수)</p>
-                        <p>정성일(광주여자대학교 교수</p>
-                        <p>정훈식(울산대학교 국어국문학부 객원교수</p>
-                        <p>이정은(국립해야박물관 선임 학예사</p>
+                        <p>정성일(광주여자대학교 교수)</p>
+                        <p>정훈식(울산대학교 국어국문학부 객원교수)</p>
+                        <p>이정은(국립해야박물관 선임 학예사)</p>
                         <p>정은영(부산대학교 강사)</p>
                         <p>편집감사 : 조가원 · 최유미(부산대학교 박사수료)</p>
                         <p>아카이브 개발 : (주)바이브컴퍼니 (대표: 이재용)</p>
                         <p>글쎄 (대표: 신현동)</p>
                         <p>엠에앰네트웍스 (대표: 김성원)</p>
-
                     </div>
                 </article>
             </section>
