--- a/adminBookList.html
+++ b/adminBookList.html
@@ -42,6 +42,10 @@
 
     <section id="adminContent">
         <article class="web-common-inner">
+            <a class="adm-go-home-button" href="/main.html">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M20 20a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-9H1l10.327-9.388a1 1 0 0 1 1.346 0L23 11h-3v9z"/></svg>
+                조선통신사 디지털아카이브 메인
+            </a>
             <div class="admin-book-item">
                 <div id="adminBookId">12345</div>
                 <div id="adminBookImg">
